--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>understanding ts</title>
-    <script src="index.js" ></script>
+    <script src="dist/index.js" ></script>
   </head>
+
   <body>
-  derp 2
+    <p id='message-output'></p>
   </body>
 </html>
